# v-w-bc

./: .gitmodules  Makefile  README.md  meson.build  meson_options.txt  package.json
cross/: emscripten.txt
include/vwbc/: builder.h  error.h  field.h  fields.h  init.h  parser.h  reader.h  writer.h
include/vwblockchain/: error.h  init.h
src/: builder.cpp  demo.c  field.cpp  init.c  lib.cpp  main.c  parser.cpp  reader.cpp  writer.cpp
src/crypt/: encryption_public_key.c
test/: scratch.js  test.js
